--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Tobit.Software",
   "license": "ISC",
   "devDependencies": {
+    "alt": "^0.18.6",
+    "alt-utils": "^1.0.0",
     "appcache-webpack-plugin": "^1.3.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
@@ -26,14 +28,15 @@
     "html-webpack-plugin": "^2.26.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.5.0",
-    "react": "^15.3.0",
+    "object-assign": "^4.1.1",
+    "react": "^15.4.2",
     "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
+    "tobit-chayns_components": "^1.0.33",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
-    "webpack-replace": "^1.0.0",
-    "tobit-chayns_components": "^1.0.33"
+    "webpack-replace": "^1.0.0"
   }
 }
