--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "chayns-template-es6-react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "chayns-template-es6-react",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --colors --progress --config ./webpack/dev.babel.js --host 0.0.0.0 --port 8080",
     "qa": "webpack -p --colors --progress --config ./webpack/qa.babel.js",
     "release": "webpack -p --colors --progress --config ./webpack/prod.babel.js",
-    "setup": "mkdirp ./src/utils && mkdirp ./src/components/admin_view && mkdirp ./src/components/user_view"
+    "setup": "mkdirp ./src/utils"
   },
   "author": "Tobit.Software",
   "license": "ISC",
